syntax = "proto3";

package proto;

option go_package = "./";

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
  uint64 id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string role = 5;
  string password = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message RegisterUserRequest {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
  string role = 4;
  string password = 5;
}

message RegisterUserResponse {
  User user = 1;
}

message GetProfileRequest {
  uint64 id = 1;
}

message GetProfileResponse {
  User user = 1;
}

message UpdateProfileRequest {
  User user = 1;
}

message UpdateProfileResponse {
  User user = 1;
}

message DeleteUserRequest {
  uint64 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}
